# brichka

./: .gitignore  Cargo.toml  Justfile  README.md  dist-workspace.toml  flake.nix  foo.sc
.github/workflows/: publish-crates.yml  release.yml
src/: cli.rs  main.rs
src/client/: cluster.rs  command.rs  context.rs  mod.rs  uc.rs
src/commands/: cluster.rs  config.rs  init.rs  lsp.rs  mod.rs  run.rs  status.rs
src/config/: mod.rs
