[package]
name = "brichka"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/nikolaiser/brichka"
license-file = "LICENSE"
description = "Cli tools for databricks"
homepage = "https://github.com/nikolaiser/brichka"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
clap-stdin = "0.8.0"
# Until https://github.com/skim-rs/skim/issues/905 is fixed
skim = "0.20.5"
tower-lsp = "0.20.0"
dashmap = "6.1.0"
reqwest = "0.13.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
